# serializer version: 1
# name: test_entities[media_player.spotify_spotify_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.spotify_spotify_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'spotify',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 444983>,
    'translation_key': 'spotify',
    'unique_id': '1112264111',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[media_player.spotify_spotify_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/media_player_proxy/media_player.spotify_spotify_1?token=mock-token&cache=7bb89748322acb6c',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Spotify spotify_1',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Permanent Waves',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Rush',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify:track:4e9hUiLsN4mx61ARosFi7p',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.MUSIC: 'music'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 296,
      <MediaPlayerEntityStateAttribute.MEDIA_PLAYLIST: 'media_playlist'>: 'Spotify Web API Testing playlist',
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 249,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION_UPDATED_AT: 'media_position_updated_at'>: HAFakeDatetime(2023, 10, 21, 0, 0, tzinfo=datetime.timezone.utc),
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'The Spirit Of Radio',
      <MediaPlayerEntityStateAttribute.MEDIA_TRACK: 'media_track'>: 1,
      <MediaPlayerEntityStateAttribute.MEDIA_REPEAT: 'repeat'>: <RepeatMode.OFF: 'off'>,
      <MediaPlayerEntityStateAttribute.MEDIA_SHUFFLE: 'shuffle'>: False,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'Master Bathroom Speaker',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 444983>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.25,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.spotify_spotify_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
# name: test_podcast[media_player.spotify_spotify_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.spotify_spotify_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'spotify',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 2048>,
    'translation_key': 'spotify',
    'unique_id': '1112264111',
    'unit_of_measurement': None,
  })
# ---
# name: test_podcast[media_player.spotify_spotify_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/media_player_proxy/media_player.spotify_spotify_1?token=mock-token&cache=cf1e6e1e830f08d3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Spotify spotify_1',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Safety Third',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_ID: 'media_content_id'>: 'spotify:episode:3o0RYoo5iOMKSmEbunsbvW',
      <MediaPlayerEntityStateAttribute.MEDIA_CONTENT_TYPE: 'media_content_type'>: <MediaType.PODCAST: 'podcast'>,
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 3690,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 5,
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION_UPDATED_AT: 'media_position_updated_at'>: HAFakeDatetime(2023, 10, 21, 0, 0, tzinfo=datetime.timezone.utc),
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'My Squirrel Has Brain Damage - Safety Third 119',
      <MediaPlayerEntityStateAttribute.MEDIA_REPEAT: 'repeat'>: <RepeatMode.OFF: 'off'>,
      <MediaPlayerEntityStateAttribute.MEDIA_SHUFFLE: 'shuffle'>: False,
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'Sonos Roam SL',
      <MediaPlayerEntityCapabilityAttribute.INPUT_SOURCE_LIST: 'source_list'>: list([
        'DESKTOP-BKC5SIK',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 2048>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.46,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.spotify_spotify_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
